# songobi

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  config.py  dev-setup.bat  docker-compose.yml  pyproject.toml  run.py  run_simple.py  setup.py  songo_bi_enhanced.py  start.bat  start.ps1  test_basic.py
.github/workflows/: ci.yml
docker/: docker-bootstrap.sh  docker-frontend.sh  docker-init.sh
requirements/: base.txt  development.txt
songo-bi-frontend/: package.json  tsconfig.json  webpack.config.js
songo-bi-frontend/src/: App.tsx  index.tsx
songo-bi-frontend/src/components/Chat/: ChatInterface.tsx
songo-bi-frontend/src/hooks/: useAuth.ts  useChatSession.ts
songo-bi-frontend/src/services/api/: authAPI.ts  chatAPI.ts  dashboardAPI.ts  index.ts  netsuiteAPI.ts
songo-bi-frontend/src/store/: index.ts
songo-bi-frontend/src/store/slices/: authSlice.ts  chatSlice.ts
songo-bi-frontend/src/theme/: index.ts
songo-bi-frontend/src/types/: index.ts
songo_bi/: __init__.py  app.py  config.py  extensions.py  security.py
songo_bi/cli/: commands.py  main.py
songo_bi/models/: __init__.py  chatbot.py  core.py  dashboard.py  netsuite.py
songo_bi/services/: __init__.py  chatbot.py  dashboard.py  data.py  netsuite.py
songo_bi/static/: version_info.json
songo_bi/tasks/: __init__.py  celery_app.py  netsuite.py
songo_bi/utils/: __init__.py  logging.py
songo_bi/views/: __init__.py  api.py  chatbot.py  core.py  dashboard.py  netsuite.py
