[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "songo-bi"
dynamic = ["version"]
description = "Songo BI - Modern Business Intelligence Platform with AI Integration"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Songo BI Team", email = "team@songo-bi.com"},
]
keywords = [
    "business intelligence",
    "data visualization", 
    "analytics",
    "dashboard",
    "netsuite",
    "ai",
    "chatbot"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.0",
    "apispec>=6.6.0",
    "async-timeout>=4.0.0",
    "backoff>=2.2.0",
    "bcrypt>=4.3.0",
    "celery>=5.5.0",
    "click>=8.2.0",
    "click-option-group>=0.5.0",
    "colorama>=0.4.6",
    "cron-descriptor>=1.4.0",
    "croniter>=6.0.0",
    "cryptography>=44.0.0",
    "deprecation>=2.1.0",
    "flask>=2.3.0",
    "flask-appbuilder>=4.8.0",
    "flask-caching>=2.3.0",
    "flask-compress>=1.17",
    "flask-cors>=4.0.0",
    "flask-login>=0.6.0",
    "flask-migrate>=3.1.0",
    "flask-session>=0.8.0",
    "flask-talisman>=1.1.0",
    "flask-wtf>=1.2.0",
    "geopy>=2.4.0",
    "greenlet>=3.1.0",
    "gunicorn>=23.0.0",
    "hashids>=1.3.0",
    "holidays>=0.25",
    "humanize>=4.12.0",
    "isodate>=0.7.0",
    "jsonpath-ng>=1.7.0",
    "mako>=1.3.0",
    "markdown>=3.8",
    "marshmallow>=3.26.0",
    "marshmallow-union>=0.1.15",
    "msgpack>=1.0.0",
    "nh3>=0.2.0",
    "numpy>=1.26.0",
    "packaging>=25.0",
    "pandas>=2.0.0",
    "paramiko>=3.5.0",
    "parsedatetime>=2.6",
    "pillow>=11.3.0",
    "polyline>=2.0.0",
    "pyarrow>=16.1.0",
    "pyjwt>=2.10.0",
    "pyparsing>=3.2.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.1.0",
    "python-geohash>=0.8.5",
    "pyyaml>=6.0.0",
    "redis>=4.6.0",
    "selenium>=4.32.0",
    "shillelagh>=1.3.0",
    "simplejson>=3.20.0",
    "slack-sdk>=3.35.0",
    "sqlalchemy>=1.4.54,<2.0",
    "sqlalchemy-utils>=0.38.0",
    "sqlglot>=27.3.0",
    "sshtunnel>=0.4.0",
    "tabulate>=0.9.0",
    "typing-extensions>=4.14.0",
    "watchdog>=6.0.0",
    "wtforms>=3.2.0",
    "wtforms-json>=0.3.5",
    "xlsxwriter>=3.0.0",
    # NetSuite integration
    "requests>=2.32.0",
    "requests-oauthlib>=1.3.0",
    # AI/Chatbot dependencies
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
netsuite = [
    "netsuitesdk>=2.0.0",
    "zeep>=4.2.0",
]
ai = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/your-org/songo-bi"
Documentation = "https://docs.songo-bi.com"
Repository = "https://github.com/your-org/songo-bi.git"
"Bug Tracker" = "https://github.com/your-org/songo-bi/issues"

[project.scripts]
songo-bi = "songo_bi.cli.main:songo_bi"

[tool.setuptools.packages.find]
include = ["songo_bi*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.html", "*.css", "*.js", "*.png", "*.svg"]

[tool.setuptools_scm]
write_to = "songo_bi/_version.py"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["songo_bi"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["songo_bi"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
